refactor : Stream.collect(toList())를 Stream.toList로 대체 - 단순 조회 메서드이므로 toList를 통한 immutable List 반환